add swagger + frontend

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,14 +39,14 @@
                     <button id="btn-gettoken" 
                         type="buton" 
                         class="btn btn-primary">
-                            Submit
+                            GetToken
                     </button>
             </div>
         </div>
         <hr>
         <div class="row">
             <div class="col" id="token">
-                <button id="btn-gettoken" 
+                <button id="btn-getListado" 
                     type="submit" 
                     class="btn btn-primary">
                         Obtener Listado
@@ -60,6 +60,9 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
     <script src="./index.js"></script>
+    <script src="./login/infrastructure/fetch-api.js"></script>
+    <script src="./login/application/useCaseLogin.js"></script>
+    <script src="./login/infrastructure/jwt-adapter.js"></script>
 </body>
 
 </html>
